# bootcamp_python-aula19

./: README.md  db_test.db  main.py  prodModel.py  pyproject.toml
api/: main.py
api/controller/: productController.py
api/data/: db.py
api/database/: databaseAPI.db
api/model/: productModel.py
api/view/: productSchema.py
database/: databaseAPI.db
examples/: exam_fastapi.py
tests/: db_test.py  prodSchema.py
